--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="logo-box">
               <img src="images/logo.png" alt="">
               <span>
-                Transportz
+                ReClick
               </span>
             </div>
           </a>
@@ -88,7 +88,7 @@
                     <img src="images/phone.png" alt="" />
                   </div>
                   <span>
-                    (+71) 258964785
+                    (+91) 258964785
                   </span>
                 </a>
                 <a href="" class="ml-4">
@@ -96,7 +96,7 @@
                     <img src="images/mail.png" alt="" />
                   </div>
                   <span>
-                    transportz@gmail.com
+                    reclick@gmail.com
                   </span>
                 </a>
               </div>
