--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="logo-box">
             <img src="images/logo.png" alt="logo">
             <span>
-              ReClick
+              Hello
             </span>
           </div>
           <div>
