hero-areaand navbar editted

--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
-              <img src="images/logo.png" alt="">
-              <span>
-                ReClick
-              </span>
+              <img class="logo" src="images/logo1.png" alt="">
             </div>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -74,13 +71,10 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
-            <img src="images/logo.png" alt="logo">
-            <span>
-              ReClick
-            </span>
+            <img class="logo" src="images/logo1.png" alt="logo">
           </div>
           <div>
-            <div class="header_top">
+            <!-- <div class="header_top">
               <div class="header_top-contact">
 
                 <a href="" class="ml-4">
@@ -122,7 +116,7 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="header_btm">
               <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
 
@@ -226,9 +220,9 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="slider_img-box">
+                    <!-- <div class="slider_img-box">
                       <img src="images/truck.png" alt="" class="img-fluid">
-                    </div>
+                    </div> -->
                   </div>
                 </div>
 
@@ -286,9 +280,9 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="slider_img-box">
+                    <!-- <div class="slider_img-box">
                       <img src="images/truck.png" alt="" class="img-fluid">
-                    </div>
+                    </div> -->
                   </div>
                 </div>
 
@@ -894,18 +888,18 @@
             Address
           </h5>
           <p>
-            Healing Center, 176 W Street name,
-            New York, NY 10014, US
+            DIT University, Mussoorie Diversion Road
+            Makka Wala, Dehradun, Uttarakhand, India
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
             <a href="">
-              transportz@gmail.com
+              reclick@gmail.com
             </a>
           </p>
         </div>
