color scheme changed part 1

--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -196,23 +194,17 @@
                         </h1>
 
                         <div class="d-flex">
-                          <div>
-                            <a href="" class="read-btn">
-
-                              <span>
-                                Read More
-                              </span>
+                          <div class="text-center">
+                            <button type="button" class="btn read-btn">
+                              Read More
                               <img src="images/white-next.png" alt="">
-                            </a>
+                            </button>
                           </div>
-                          <div class="ml-3">
-                            <a href="" class="quote-btn">
-
-                              <span>
-                                Get A Quote
-                              </span>
+                          <div class="text-center ml-3">
+                            <button type="button" class="btn quote-btn">
+                              Get A Quote
                               <img src="images/white-next.png" alt="">
-                            </a>
+                            </button>
                           </div>
                         </div>
 
@@ -221,7 +213,7 @@
                   </div>
                   <div class="col-md-6">
                     <!-- <div class="slider_img-box">
-                      <img src="images/truck.png" alt="" class="img-fluid">
+                      <img src="images/truck.jpg" alt="" class="img-fluid">
                     </div> -->
                   </div>
                 </div>
@@ -256,23 +248,17 @@
                         </h1>
 
                         <div class="d-flex">
-                          <div>
-                            <a href="" class="read-btn">
-
-                              <span>
-                                Read More
-                              </span>
+                          <div class="text-center">
+                            <button type="button" class="btn read-btn">
+                              Read More
                               <img src="images/white-next.png" alt="">
-                            </a>
+                            </button>
                           </div>
-                          <div class="ml-3">
-                            <a href="" class="quote-btn">
-
-                              <span>
-                                Get A Quote
-                              </span>
+                          <div class="text-center ml-3">
+                            <button type="button" class="btn quote-btn">
+                              Get A Quote
                               <img src="images/white-next.png" alt="">
-                            </a>
+                            </button>
                           </div>
                         </div>
 
@@ -281,129 +267,8 @@
                   </div>
                   <div class="col-md-6">
                     <!-- <div class="slider_img-box">
-                      <img src="images/truck.png" alt="" class="img-fluid">
+                      <img src="images/truck.jpg" alt="" class="img-fluid">
                     </div> -->
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="slider_item-container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="slider_item-detail">
-                      <div class="slider_form-box">
-                        <form action="">
-                          <div class="search_input">
-                            <input type="text">
-                            <img src="images/search-icon.png" alt="">
-                          </div>
-
-                          <button>
-                            Search
-                          </button>
-                        </form>
-                      </div>
-                      <div>
-                        <h1>
-                          Unbeatable <br>
-                          trucking & Transport <br>
-                          Services
-                        </h1>
-
-                        <div class="d-flex">
-                          <div>
-                            <a href="" class="read-btn">
-
-                              <span>
-                                Read More
-                              </span>
-                              <img src="images/white-next.png" alt="">
-                            </a>
-                          </div>
-                          <div class="ml-3">
-                            <a href="" class="quote-btn">
-
-                              <span>
-                                Get A Quote
-                              </span>
-                              <img src="images/white-next.png" alt="">
-                            </a>
-                          </div>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="slider_img-box">
-
-                      <img src="images/truck.png" alt="" class="img-fluid">
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="slider_item-container">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="slider_item-detail">
-                      <div class="slider_form-box">
-                        <form action="">
-                          <div class="search_input">
-                            <input type="text">
-                            <img src="images/search-icon.png" alt="">
-                          </div>
-
-                          <button>
-                            Search
-                          </button>
-                        </form>
-                      </div>
-                      <div>
-                        <h1>
-                          Unbeatable <br>
-                          trucking & Transport <br>
-                          Services
-                        </h1>
-
-                        <div class="d-flex">
-                          <div>
-                            <a href="" class="read-btn">
-
-                              <span>
-                                Read More
-                              </span>
-                              <img src="images/white-next.png" alt="">
-                            </a>
-                          </div>
-                          <div class="ml-3">
-                            <a href="" class="quote-btn">
-
-                              <span>
-                                Get A Quote
-                              </span>
-                              <img src="images/white-next.png" alt="">
-                            </a>
-                          </div>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="slider_img-box">
-                      <img src="images/truck.png" alt="" class="img-fluid">
-                    </div>
                   </div>
                 </div>
 
@@ -598,8 +463,6 @@
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicator" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicator" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicator" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicator" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -854,34 +717,13 @@
           <div class="logo-box">
             <img src="images/logo-white.png" alt="">
             <span>
-              Transportz
+              ReClick
             </span>
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
           </p>
-          <div class="info_social">
-            <div>
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/g-plus.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-          </div>
+
         </div>
         <div class="col-md-3 info_address">
           <h5>
@@ -962,8 +804,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2022 All Rights Reserved By
+      <a href="https://html.design/">ReClick Pvt. Ltd.</a>
     </p>
   </section>
   <!-- footer section -->
