--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1" class></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -188,9 +188,9 @@
                       </div>
                       <div>
                         <h1>
-                          Unbeatable <br>
-                          trucking & Transport <br>
-                          Services
+                          Now <br>
+                          Re-Click <br>
+                          for Nature
                         </h1>
 
                         <div class="d-flex">
