--- a/index.html
+++ b/index.html
@@ -175,16 +175,6 @@
                   <div class="col-md-6">
                     <div class="slider_item-detail">
                       <div class="slider_form-box">
-                        <form action="">
-                          <div class="search_input">
-                            <input type="text">
-                            <img src="images/search-icon.png" alt="">
-                          </div>
-
-                          <button>
-                            Search
-                          </button>
-                        </form>
                       </div>
                       <div>
                         <h1>
@@ -202,7 +192,7 @@
                           </div>
                           <div class="text-center ml-3">
                             <button type="button" class="btn quote-btn">
-                              Get A Quote
+                              Get an insight
                               <img src="images/white-next.png" alt="">
                             </button>
                           </div>
@@ -229,22 +219,12 @@
                   <div class="col-md-6">
                     <div class="slider_item-detail">
                       <div class="slider_form-box">
-                        <form action="">
-                          <div class="search_input">
-                            <input type="text">
-                            <img src="images/search-icon.png" alt="">
-                          </div>
-
-                          <button>
-                            Search
-                          </button>
-                        </form>
                       </div>
                       <div>
                         <h1>
-                          Unbeatable <br>
-                          trucking & Transport <br>
-                          Services
+                          Your step <br>
+                          toward a <br>
+                          sustainable future
                         </h1>
 
                         <div class="d-flex">
@@ -256,7 +236,7 @@
                           </div>
                           <div class="text-center ml-3">
                             <button type="button" class="btn quote-btn">
-                              Get A Quote
+                              Get an insight
                               <img src="images/white-next.png" alt="">
                             </button>
                           </div>
