--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Transportz</title>
+  <title>ReClick</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -38,10 +38,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
-              <img src="images/logo.png" alt="">
-              <span>
-                Transportz
-              </span>
+              <img class="logo" src="images/logo1.png" alt="">
             </div>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -61,9 +58,6 @@
                 <a class="nav-link" href="service.html"> Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="shop.html"> Shop </a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="company.html"> Company </a>
               </li>
               <li class="nav-item ">
@@ -74,13 +68,10 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
-            <img src="images/logo.png" alt="">
-            <span>
-              Transportz
-            </span>
+            <img class="logo" src="images/logo1.png" alt="logo">
           </div>
           <div>
-            <div class="header_top">
+            <!-- <div class="header_top">
               <div class="header_top-contact">
 
                 <a href="" class="ml-4">
@@ -88,7 +79,7 @@
                     <img src="images/phone.png" alt="" />
                   </div>
                   <span>
-                    (+71) 258964785
+                    (+91) 258964785
                   </span>
                 </a>
                 <a href="" class="ml-4">
@@ -96,7 +87,7 @@
                     <img src="images/mail.png" alt="" />
                   </div>
                   <span>
-                    transportz@gmail.com
+                    reclick@gmail.com
                   </span>
                 </a>
               </div>
@@ -122,7 +113,7 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="header_btm">
               <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
 
@@ -145,18 +136,13 @@
                         <a class="nav-link" href="service.html"> Service</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="shop.html"> Shop </a>
-                      </li>
-                      <li class="nav-item">
                         <a class="nav-link" href="company.html"> Company </a>
                       </li>
                       <li class="nav-item ">
                         <a class="nav-link pr-0" href="contact.html">Contact us</a>
                       </li>
                     </ul>
-
                   </div>
-
                 </div>
               </nav>
             </div>
@@ -233,52 +219,31 @@
           <div class="logo-box">
             <img src="images/logo-white.png" alt="">
             <span>
-              Transportz
+              ReClick
             </span>
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
           </p>
-          <div class="info_social">
-            <div>
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/g-plus.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-          </div>
+
         </div>
         <div class="col-md-3 info_address">
           <h5>
             Address
           </h5>
           <p>
-            Healing Center, 176 W Street name,
-            New York, NY 10014, US
+            DIT University, Mussoorie Diversion Road
+            Makka Wala, Dehradun, Uttarakhand, India
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
             <a href="">
-              transportz@gmail.com
+              reclick@gmail.com
             </a>
           </p>
         </div>
@@ -341,8 +306,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2022 All Rights Reserved By
+      <a href="https://html.design/">ReClick Pvt. Ltd.</a>
     </p>
   </section>
   <!-- footer section -->
