--- a/about.html
+++ b/about.html
@@ -164,8 +164,8 @@
             About Us
           </h2>
           <p>
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco
+            A waste management service with the aim of collecting the different types of waste from multiple areas and
+            dumping them safely after segregation as per their categories and specifications.
           </p>
         </div>
 
@@ -180,13 +180,12 @@
         <div class="col-md-6 about_detail-container">
           <div class="about_detail-box">
             <h3>
-              Company and Transport
+              ReClick
             </h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna as
+              A great initiative towards collection of various types of waste that are produced on daily basis and
+              dumping them accordingly so that we have a safe, sustainable and healthy future. This time the aim of
+              having a better future is just a click away from your end.
             </p>
             <div class="d-flex  justify-content-end">
               <a href="" class="quote-btn about-btn">
@@ -201,6 +200,7 @@
         </div>
       </div>
     </div>
+
 
   </section>
 
