--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
             About Us
           </h2>
           <p>
-            A waste management service with the aim of collecting the different types of waste from multiple areas and dumping them safely after segregation as per their categories and specifications.
+            A waste management service with the aim of collecting the different types of waste from multiple areas and
+            dumping them safely after segregation as per their categories and specifications.
           </p>
         </div>
 
@@ -279,7 +280,9 @@
               ReClick
             </h3>
             <p>
-              A great initiative towards collection of various types of waste that are produced on daily basis and dumping them accordingly so that we have a safe, sustainable and healthy future. This time the aim of having a better future is just a click away from your end.
+              A great initiative towards collection of various types of waste that are produced on daily basis and
+              dumping them accordingly so that we have a safe, sustainable and healthy future. This time the aim of
+              having a better future is just a click away from your end.
             </p>
             <div class="d-flex  justify-content-end">
               <a href="" class="quote-btn about-btn">
@@ -304,7 +307,7 @@
     <div class="container">
       <div class="d-flex justify-content-center">
         <h2 class="heading_style">
-          Our Services
+          Our Workflow
         </h2>
       </div>
       <div class="row layout_padding2-top">
@@ -314,7 +317,6 @@
             <div class="d-flex">
               <h3>
                 CARGO
-
               </h3>
             </div>
           </div>
@@ -336,8 +338,6 @@
             <div class="d-flex">
               <h3>
                 LOGISTIC SERVICE
-
-
               </h3>
             </div>
           </div>
@@ -359,8 +359,6 @@
             <div class="d-flex">
               <h3>
                 STORAGE
-
-
               </h3>
             </div>
           </div>
@@ -385,7 +383,7 @@
   <section class="client_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="heading_style">
-        Testimonial
+        Testimonials
       </h2>
     </div>
     <div id="carouselExampleIndicator" class="carousel slide" data-ride="carousel">
@@ -404,12 +402,12 @@
                   </div>
                   <div class="client_detail">
                     <h5>
-                      Rock lu
+                      Ramesh Chachu
                     </h5>
                     <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
+                      The services provided by ReClick is just amazing. I am very happy with the services provided by
+                      them. They respond to my queries very quickly.
+                      And also they are very friendly and helpful.
                     </p>
                   </div>
                 </div>
@@ -424,9 +422,9 @@
                       Rock lu
                     </h5>
                     <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
+                      ReClick manages waste is the best possible way. Also they pay for the least dangerous waste more.
+                      So that people can generate waste that is not so hazardous for the environment.
+                      I like this concept of ReClick.
                     </p>
                   </div>
                 </div>
@@ -444,12 +442,11 @@
                   </div>
                   <div class="client_detail">
                     <h5>
-                      Rock lu
+                      Hrishab Patel
                     </h5>
                     <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
+                      ReCLick has been managing my office waste for the last 8 months and I am very happy with the
+                      services provided by them.
                     </p>
                   </div>
                 </div>
@@ -461,92 +458,13 @@
                   </div>
                   <div class="client_detail">
                     <h5>
-                      Rock lu
+                      Varnika Tyagi
                     </h5>
                     <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="client_box c-b-1">
-                  <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
-                  </div>
-                  <div class="client_detail">
-                    <h5>
-                      Rock lu
-                    </h5>
-                    <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="client_box c-b-2">
-                  <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
-                  </div>
-                  <div class="client_detail">
-                    <h5>
-                      Rock lu
-                    </h5>
-                    <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="client_box c-b-1">
-                  <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
-                  </div>
-                  <div class="client_detail">
-                    <h5>
-                      Rock lu
-                    </h5>
-                    <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="client_box c-b-2">
-                  <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
-                  </div>
-                  <div class="client_detail">
-                    <h5>
-                      Rock lu
-                    </h5>
-                    <p>
-                      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical
-                      Latin literature from 45 BC, making it over 2000 years
+                      Waste is an important aspect that affects the nature in a multiple ways. ReClick does this task of
+                      managing the waste in the best way. The services provided are so easy to use.
+                      They themself do every task. All you need to do is request a pickup. And rest assured that they
+                      will pick up your waste in the best possible way.
                     </p>
                   </div>
                 </div>
