--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <div class="container">
       <div class="d-flex justify-content-center">
         <h2 class="heading_style">
-          Our Services
+          Work Procedure
         </h2>
       </div>
       <div class="row layout_padding2-top">
@@ -313,15 +313,14 @@
             <img src="images/service-1.jpg" alt="">
             <div class="d-flex">
               <h3>
-                CARGO
-
+                Waste Generation
               </h3>
             </div>
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              The very first step is the generation of waste at different sources.
+              Waste is generated at different sources and accordingly the second step is carried out.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
@@ -335,16 +334,14 @@
             <img src="images/service-2.jpg" alt="">
             <div class="d-flex">
               <h3>
-                LOGISTIC SERVICE
-
-
+                Request for Pickup
               </h3>
             </div>
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              The second step involves requesting pickup service through the website to initiate the process further.
+              The pickup request is done through the official website of ReClick.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
@@ -358,7 +355,7 @@
             <img src="images/service-3.jpg" alt="">
             <div class="d-flex">
               <h3>
-                STORAGE
+                Attendant Responds
 
 
               </h3>
@@ -366,8 +363,27 @@
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              Once the pickup is requested, the nearest attendant responds to the request and is appointed to carry out the process further. The attendant goes to the location accordingly.
+            </p>
+            <div class="d-flex justify-content-end">
+              <a href="" class="service-btn">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service_img-box s-b-2">
+            <img src="images/service-2.jpg" alt="">
+            <div class="d-flex">
+              <h3>
+                Segregation
+              </h3>
+            </div>
+          </div>
+          <div class="service-detail">
+            <p>
+              Next up, is the segregation of waste products. Once the attendant reaches the location, the segregation of waste is done by the attendant according to the type of waste collected.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
