--- a/index.html
+++ b/index.html
@@ -393,6 +393,26 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="service_img-box s-b-2">
+            <img src="images/service-2.jpg" alt="">
+            <div class="d-flex">
+              <h3>
+                Transportation
+              </h3>
+            </div>
+          </div>
+          <div class="service-detail">
+            <p>
+              Lastly, the segregated waste is carried forward to the specified treatement plant for recycling them accordingly so as to assure a safe and sustainable future.
+            </p>
+            <div class="d-flex justify-content-end">
+              <a href="" class="service-btn">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
