--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <img src="images/service-3.jpg" alt="">
             <div class="d-flex">
               <h3>
-                STORAGE
+                Attendant Responds
               </h3>
             </div>
           </div>
@@ -374,8 +374,8 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="service_img-box s-b-2">
-            <img src="images/service-2.jpg" alt="">
+          <div class="service_img-box s-b-4">
+            <img src="images/service-4.jpg" alt="">
             <div class="d-flex">
               <h3>
                 Segregation
@@ -394,8 +394,8 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="service_img-box s-b-2">
-            <img src="images/service-2.jpg" alt="">
+          <div class="service_img-box s-b-5">
+            <img src="images/service-5.jpg" alt="">
             <div class="d-flex">
               <h3>
                 Transportation
