--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                   </div>
                   <div class="client_detail">
                     <h5>
-                      Ramesh Chachu
+                      Shanaya Mehrotra
                     </h5>
                     <p>
                       The services provided by ReClick is just amazing. I am very happy with the services provided by
@@ -531,10 +531,9 @@
                 Company
               </h3>
               <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 yearsContrary to popular belief, Lorem Ipsum is not
-                simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
-                2000 years
+                In contrast to the various waste picking services, ReClick comes up with the idea of managing the waste products efficoently and safely with the aim of becoming a medium between the garbage pickers and the common people.
+                ReClick not only manages the waste products in a great way but has also been trying to keep the environment clean and hygeine putting it's step towards a sustainable future.
+                ReClick allows you to be just a click away from maintaining a green country and hence a clean country.  
               </p>
             </div>
           </div>
@@ -607,7 +606,9 @@
             </span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+            Our step towards a better future.
+            <br> 
+            A step towards a better generation
           </p>
 
         </div>
