--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
       <div class="row  mb-3 pb-4">
         <div class="col-md-3 info_logo">
           <div class="logo-box">
-            <img src="images/logo-white.png" alt="">
+            <img src="images/logo1.png" alt="">
             <span>
               ReClick
             </span>
